tests/macro-tests/cases/widget_new/invalid_special.stderr
error: unknown special value, expected `unset!`
 --> cases/widget_new/invalid_special.rs:6:28
  |
6 |         background_color = invalid!;
  |                            ^^^^^^^

warning: unused import: `widget::background_color`
 --> cases/widget_new/invalid_special.rs:1:32
  |
1 | use zng::{APP, button::Button, widget::background_color};
  |                                ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
